--- a/app/src/main/res/layout/dialog_fragment_group_recipients.xml
+++ b/app/src/main/res/layout/dialog_fragment_group_recipients.xml
@@ -23,6 +23,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_norm"
     android:minWidth="@dimen/manage_labels_min_width"
     android:padding="@dimen/padding_l">
 
