--- a/app/src/main/res/layout/custom_quick_snooze_dialog.xml
+++ b/app/src/main/res/layout/custom_quick_snooze_dialog.xml
@@ -20,6 +20,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/background_norm"
     android:gravity="center"
     android:orientation="horizontal">
 
