--- a/app/src/main/res/layout/dialog_email_type.xml
+++ b/app/src/main/res/layout/dialog_email_type.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2022 Proton AG
   ~
   ~ This file is part of Proton Mail.
@@ -18,81 +17,40 @@
   ~ along with Proton Mail. If not, see https://www.gnu.org/licenses/.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_norm"
     android:orientation="vertical"
-    android:paddingEnd="0dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="0dp"
     android:paddingStart="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingEnd="0dp"
+    android:paddingRight="0dp">
 
-    <ch.protonmail.android.views.CustomFontTextView
+    <TextView
+        style="@style/Proton.Text.Default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/fields_default_space_large"
-        android:paddingEnd="@dimen/fields_default_space_small"
-        android:paddingLeft="@dimen/fields_default_space_small_plus"
-        android:paddingRight="@dimen/fields_default_space_small"
         android:paddingStart="@dimen/fields_default_space_small_plus"
-        android:text="@string/type_title"
-        android:textSize="@dimen/h3"
-        app:fontName="Roboto-Bold.ttf" />
+        android:paddingLeft="@dimen/fields_default_space_small_plus"
+        android:paddingEnd="@dimen/fields_default_space_small"
+        android:paddingRight="@dimen/fields_default_space_small"
+        android:text="@string/type_title" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingEnd="22dp"
-        android:paddingRight="22dp"
+        android:paddingStart="0dp"
         android:paddingLeft="0dp"
-        android:paddingStart="0dp">
+        android:paddingEnd="22dp"
+        android:paddingRight="22dp">
 
         <LinearLayout
             android:id="@+id/standard_option_types"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+            android:orientation="vertical" />
 
-        <!--<android.support.v7.widget.AppCompatRadioButton
-            android:id="@+id/option_type_custom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/standard_option_types"
-            android:layout_marginTop="@dimen/fields_default_space" />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/option_type_custom"
-            android:layout_below="@id/standard_option_types"
-            android:layout_marginTop="@dimen/fields_default_space"
-            android:layout_toEndOf="@id/option_type_custom"
-            android:layout_toRightOf="@id/option_type_custom">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:focusable="true"
-                android:focusableInTouchMode="true" />
-
-            <ch.protonmail.android.views.CustomFontEditText
-                android:id="@+id/option_type_custom_value"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:background="@drawable/login_edittext_inverted"
-                android:gravity="center_vertical"
-                android:hint="@string/option_type_custom"
-                android:paddingLeft="4dp"
-                android:paddingStart="4dp"
-                android:paddingRight="0dp"
-                android:paddingEnd="0dp"
-                android:paddingTop="0dp"
-                android:textColor="@color/black"
-                android:textColorHint="@color/iron_gray"
-                android:textSize="@dimen/h5" />
-
-        </RelativeLayout>-->
     </RelativeLayout>
 </LinearLayout>
