--- a/app/src/main/res/layout/dialog_fragment_quick_snooze.xml
+++ b/app/src/main/res/layout/dialog_fragment_quick_snooze.xml
@@ -21,11 +21,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/labels_dialog_bg"
+    android:background="@color/background_norm"
     android:minWidth="@dimen/manage_labels_min_width"
     android:orientation="vertical"
-    android:paddingBottom="0dp"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
