--- a/app/src/main/res/layout/dialog_message_troubleshoot.xml
+++ b/app/src/main/res/layout/dialog_message_troubleshoot.xml
@@ -20,6 +20,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_norm"
     android:paddingTop="@dimen/padding_xxl">
 
     <TextView
