--- a/app/src/main/res/layout/dialog_recipient_expiration_unsupported.xml
+++ b/app/src/main/res/layout/dialog_recipient_expiration_unsupported.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2022 Proton AG
   ~
   ~ This file is part of Proton Mail.
@@ -17,49 +16,49 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with Proton Mail. If not, see https://www.gnu.org/licenses/.
   -->
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/background_norm">
 
     <TextView
         android:id="@+id/dialog_expiration_unsupported_title_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_gravity="center"
         android:padding="@dimen/padding_l"
-        android:textAppearance="@style/ProtonTextView.Body1"
         android:text="@string/expiration_error_title"
-        android:textColor="@color/text_norm"/>
+        android:textAppearance="@style/ProtonTextView.Body1"
+        android:textColor="@color/text_norm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <me.proton.core.presentation.ui.view.ProtonButton
         android:id="@+id/dialog_expiration_unsupported_send_anyway_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_m"
+        android:text="@string/send_anyway"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/send_anyway" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <me.proton.core.presentation.ui.view.ProtonButton
         android:id="@+id/dialog_expiration_unsupported_cancel_button"
+        style="@style/ProtonButton.Borderless.Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_m"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/dialog_expiration_unsupported_send_anyway_button"
-        style="@style/ProtonButton.Borderless.Text"
+        android:text="@string/cancel"
         android:textColor="?attr/colorError"
-        android:text="@string/cancel" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/dialog_expiration_unsupported_send_anyway_button" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/dialog_expiration_unsupported_title_text_view"
         app:layout_constraintBottom_toTopOf="@id/dialog_expiration_unsupported_send_anyway_button"
+        app:layout_constraintTop_toBottomOf="@id/dialog_expiration_unsupported_title_text_view"
         app:layout_constraintVertical_bias="0">
 
         <LinearLayout
@@ -139,11 +138,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/activity_vertical_margin_large"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingStart="@dimen/activity_horizontal_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin_large"
                 android:visibility="gone" />
 
             <include layout="@layout/horizontal_divider" />
@@ -152,18 +151,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin_large">
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin_large"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin">
 
                 <TextView
                     style="@style/SettingsHeadingText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/Proton.Text.Caption"
                     android:text="@string/expiration_error_proceed"
+                    android:textAppearance="@style/Proton.Text.Caption"
                     android:textColor="@color/text_hint"
                     app:fontName="Roboto-Regular.ttf" />
 
