--- a/app/src/main/res/layout/item_email_expiration_error_dialog.xml
+++ b/app/src/main/res/layout/item_email_expiration_error_dialog.xml
@@ -21,6 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
+    android:background="@color/background_norm"
     android:padding="@dimen/activity_vertical_margin_xsmall">
 
     <TextView
