--- a/app/src/main/res/layout/layout_dialog_warning.xml
+++ b/app/src/main/res/layout/layout_dialog_warning.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2022 Proton AG
   ~
   ~ This file is part of Proton Mail.
@@ -18,76 +17,71 @@
   ~ along with Proton Mail. If not, see https://www.gnu.org/licenses/.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  xmlns:app="http://schemas.android.com/apk/res-auto"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  xmlns:tools="http://schemas.android.com/tools"
-			  android:orientation="vertical"
-			  android:paddingBottom="@dimen/fields_default_space"
-			  android:paddingLeft="@dimen/fields_default_space"
-			  android:paddingRight="@dimen/fields_default_space">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_norm"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/fields_default_space"
+    android:paddingRight="@dimen/fields_default_space"
+    android:paddingBottom="@dimen/fields_default_space">
 
 
-    <ch.protonmail.android.views.CustomFontTextView
+    <TextView
         android:id="@+id/title"
+        style="@style/Proton.Text.Default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="24dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="0dp"
-        android:paddingStart="0dp"
-        android:text="@string/warning"
-        android:textSize="@dimen/h2"
-        app:fontName="Roboto-Regular.ttf" />
+        android:layout_marginLeft="@dimen/padding_l"
+        android:layout_marginTop="@dimen/padding_xl"
+        android:layout_marginRight="@dimen/padding_l"
+        android:paddingBottom="@dimen/padding_m"
+        android:text="@string/warning" />
 
-    <ch.protonmail.android.views.CustomFontTextView
+    <TextView
         android:id="@+id/subtitle"
+        style="@style/Proton.Text.Default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="24dp"
-        android:gravity="left"
+        android:layout_marginLeft="@dimen/padding_l"
+        android:layout_marginTop="@dimen/padding_xl"
+        android:layout_marginRight="@dimen/padding_l"
         android:linksClickable="true"
-        android:paddingBottom="5dp"
-        android:paddingLeft="0dp"
-        android:paddingStart="0dp"
-        android:textColor="@color/rain_gray"
-        android:textSize="@dimen/h4"
-        app:fontName="Roboto-Light.ttf"
-		tools:text="Action forbidden!"
-	/>
+        android:paddingBottom="@dimen/padding_m"
+        tools:text="Action forbidden!" />
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <me.proton.core.presentation.ui.view.ProtonButton
             android:id="@+id/cancel"
             android:layout_width="wrap_content"
-            android:layout_height="42dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="24dp"
-            android:maxLines="1"
-            android:textAllCaps="true"
-			tools:text="Cancel"
-		/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/padding_l"
+            android:layout_marginTop="@dimen/padding_xl"
+            android:layout_marginRight="@dimen/padding_l"
+            android:layout_marginBottom="@dimen/padding_m"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/ok"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Cancel" />
 
         <me.proton.core.presentation.ui.view.ProtonButton
             android:id="@+id/ok"
             android:layout_width="wrap_content"
-            android:layout_height="42dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="24dp"
-            android:maxLines="1"
-            android:paddingEnd="@dimen/fields_default_space_small"
-            android:paddingStart="@dimen/fields_default_space_small"
-			tools:text="OK"
-		/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/padding_l"
+            android:layout_marginTop="@dimen/padding_xl"
+            android:layout_marginRight="@dimen/padding_l"
+            android:layout_marginBottom="@dimen/padding_m"
+            app:layout_constraintStart_toEndOf="@id/cancel"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Ok" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
