--- a/app/src/main/res/layout/timeout_spinner_item_dropdown.xml
+++ b/app/src/main/res/layout/timeout_spinner_item_dropdown.xml
@@ -17,9 +17,9 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with Proton Mail. If not, see https://www.gnu.org/licenses/.
   -->
-<ch.protonmail.android.views.CustomFontTextView android:id="@android:id/text1"
+<TextView android:id="@android:id/text1"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/Proton.Text.Default"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
@@ -32,6 +32,4 @@
     android:paddingLeft="@dimen/fields_default_space_small"
     android:paddingRight="@dimen/fields_default_space_small"
     android:paddingStart="@dimen/fields_default_space_small"
-    android:paddingTop="@dimen/fields_default_space_medium"
-    android:textColor="@color/iron_gray"
-    app:fontName="Roboto-Light.ttf" />
+    android:paddingTop="@dimen/fields_default_space_medium" />
