--- a/app/src/main/res/layout/content_edit_create_contact_group_header.xml
+++ b/app/src/main/res/layout/content_edit_create_contact_group_header.xml
@@ -119,14 +119,14 @@
                 android:layout_height="match_parent"
                 android:divider="@null" />
 
-            <ch.protonmail.android.views.CustomFontTextView
+            <TextView
+                style="@style/Proton.Text.Default"
                 android:id="@+id/noResults"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/no_contacts"
                 android:textColor="?attr/brand_norm"
-                android:textSize="@dimen/h2"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
