--- a/app/src/main/res/layout/dialog_fragment_quick_snooze.xml
+++ b/app/src/main/res/layout/dialog_fragment_quick_snooze.xml
@@ -45,7 +45,8 @@
             android:textColor="#505061"
             android:textSize="20sp" />
 
-        <ch.protonmail.android.views.CustomFontTextView
+        <TextView
+            style="@style/Proton.Text.Default"
             android:id="@+id/notifications_resume_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,7 +57,7 @@
             android:padding="0dp"
             android:textColor="#505061"
             android:textSize="14sp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:fontName="Roboto-Thin.ttf" />
 
         <LinearLayout
