--- a/app/src/main/res/layout/checkbox.xml
+++ b/app/src/main/res/layout/checkbox.xml
@@ -26,12 +26,11 @@
         style="@style/ProtonCheckBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="20dp"
-        android:button="@drawable/custom_labels_checkbox"
-        android:paddingStart="8dp"
-        android:paddingLeft="8dp"
+        android:layout_marginStart="@dimen/padding_xl"
+        android:layout_marginEnd="@dimen/padding_xl"
+        android:layout_marginTop="@dimen/padding_xl"
+        android:paddingStart="@dimen/padding_m"
+        android:paddingEnd="@dimen/padding_m"
         tools:text="Checkbox Text" />
 
 </FrameLayout>
